Refactored: Converted to gradle project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-bin/
-.settings/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
 .classpath
+.gitattributes
 .project
+.settings/
+bin/
+gradle/
+gradlew
+gradlew.bat
+settings.gradle
