--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-bin/
-.settings/
+bin
+gradle
+.settings
+gradlew
+gradlew.bat
 .classpath
+.gitattributes
 .project
+.classpath
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
